--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,11 +1,18 @@
 .Footer {
   margin: auto;
-  background: white;
+  border-top: 5px solid rgb(94, 94, 94);
+  background: rgb(41, 41, 41);
+  color: white;
+  font-size: 0.75em;
   padding: 32px 0 32px 0;
   text-align: center;
   margin: 0;
   width: 100%;
-  position: absolute;
-  margin-top: calc(5% + 60px);
-  bottom: 0;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: rgb(55, 175, 255);
 }
