--- a/src/components/Home/index.module.css
+++ b/src/components/Home/index.module.css
@@ -16,6 +16,7 @@
 .Subtitle {
   color: rgb(85, 85, 85);
   margin-top: 24px !important;
+  margin-bottom: 24px !important;
 }
 
 .Url {
